Blackpurl/src/objects/QuickBooks_Configurations__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Configurations used for Integration</description>
    <fields>
        <fullName>Access_Token_Generation_Date__c</fullName>
        <label>Access Token Generation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BatchDelayInterval__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This stores the value of delay in seconds to be added to batch before its execution.</description>
        <label>BatchDelayInterval</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Company_Country__c</fullName>
        <label>Company Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Id__c</fullName>
        <label>Company Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <label>Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consumer_Key__c</fullName>
        <label>Consumer Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consumer_Secret__c</fullName>
        <label>Consumer Secret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enable_QuickBooks__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable QuickBooks</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>End_Point_URL__c</fullName>
        <label>End Point URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Non_Taxable_Purchase_Tax_Code__c</fullName>
        <label>Non Taxable Purchase Tax Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Non_Taxable_Tax_Code__c</fullName>
        <description>Accounting Id of QB tax code having a zero combined_tax_rate_pct</description>
        <label>Non Taxable Tax Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OAuth_Token_Secret__c</fullName>
        <label>OAuth Token Secret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OAuth_Token__c</fullName>
        <label>OAuth Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Timeout__c</fullName>
        <defaultValue>30</defaultValue>
        <description>Accepts value in seconds for which the callout will wait for the response. 
Minimum value: 10 
Maximum value: 120 

NOTE: Restricted to use by DEV only.</description>
        <inlineHelpText>Accepts value in seconds for which the callout will wait for the response. 
Minimum value: 10 
Maximum value: 120 

NOTE: Restricted to use by DEV only.</inlineHelpText>
        <label>Request Timeout (In Seconds)</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TaxCode_Id__c</fullName>
        <label>TaxCode Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TaxCode_Name__c</fullName>
        <label>TaxCode Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Agency_Id__c</fullName>
        <label>Tax Agency Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Agency_Name__c</fullName>
        <label>Tax Agency Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Agency_Sync_Response__c</fullName>
        <label>Tax Agency Sync Response</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Code_Sync_Response__c</fullName>
        <label>Tax Code Sync Response</label>
        <type>TextArea</type>
    </fields>
    <label>Integration Configurations</label>
</CustomObject>